# aws-sqs-create-queue

./: .gitignore  Cargo.toml  README.md
examples/: sqs-conf.toml
src/: cli.rs  config.rs  main.rs  queue.rs
