[package]
name = "aws-sqs-create-queue"
version = "0.1.0"
edition = "2021"
authors = ["PY <py@pypy.info>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/py0x/aws-sqs-create-queue"
homepage = "https://github.com/py0x/aws-sqs-create-queue"
description = """
Create multiple AWS SQS queues and its corresponding dead-letter-queues with minimal configuration.
"""
keywords = ["aws", "sqs", "dead letter queue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-sqs = "0.19.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
anyhow = "1.0.65"
serde_json = "1.0.86"
serde = { version = "1.0", features = ["derive"]}
clap = { version = "3.2.22", features = ["derive"] }